# omnifetch

./: Cargo.toml  README.md
files/: fenix.txt  omnios.txt
src/: main.rs  util.rs
