[package]
name = "omnifetch"
version = "1.0.3"
edition = "2021"
description = "Print information about an OmniOS machine."
readme = "README.md"
license = "MIT"
repository = "https://github.com/bahamas10/omnifetch"

[dependencies]
anyhow = "1.0.86"
indexmap = "2.2.6"
nix = { version = "0.29.0", features = ["hostname", "fs"] }
zonename = "0.1.1"
